--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Label?>
-
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -20,54 +19,74 @@
     <ImageView fx:id="background_image" GridPane.columnIndex="1" GridPane.rowIndex="4" />
   </GridPane>
   <GridPane fx:id="GridPane_Setup" visible="false" alignment="CENTER" hgap="10" vgap="10">
-    <Label text="How many players would you like in your game?" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="4"/>
+
+    <Label text="How many players would you like in your game?" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="5"/>
     <fx:define>
       <ToggleGroup fx:id="PlayerButtons"/>
     </fx:define>
-    <RadioButton text="2 Players" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true"/>
-    <RadioButton text="3 Players" GridPane.rowIndex="2" GridPane.columnIndex="2" toggleGroup="$PlayerButtons"/>
-    <RadioButton text="4 Players" GridPane.rowIndex="2" GridPane.columnIndex="3" toggleGroup="$PlayerButtons"/>
-    <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="3" onAction="#Continue_To_Game_Button" maxWidth="Infinity"/>
-    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
-      <Label text="Player 1 Name:" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-      <TextField GridPane.rowIndex="1" GridPane.columnIndex="2"/>
-      <Button text="Set Player 1 Name" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
+    <RadioButton text="2 Players" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true" onAction="#HandlePlayerToggle"/>
+    <RadioButton text="3 Players" GridPane.rowIndex="2" GridPane.columnIndex="3" toggleGroup="$PlayerButtons" onAction="#HandlePlayerToggle"/>
+    <RadioButton text="4 Players" GridPane.rowIndex="2" GridPane.columnIndex="5" toggleGroup="$PlayerButtons" onAction="#HandlePlayerToggle"/>
 
-      <Label text="Player 2 Name:" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-      <TextField GridPane.rowIndex="2" GridPane.columnIndex="2"/>
-      <Button text="Set Player 2 Name" GridPane.rowIndex="2" GridPane.columnIndex="3"/>
+    <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="5" onAction="#Continue_To_Game_Button" maxWidth="Infinity"/>
 
-      <GridPane visible="false" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.columnSpan="3" fx:id="Player_3_N_GP">
-        <Label text="Player 3 Name:" GridPane.rowIndex="3" GridPane.columnIndex="1" />
-        <TextField GridPane.rowIndex="3" GridPane.columnIndex="2"/>
-        <Button text="Set Player 3 Name" GridPane.rowIndex="3" GridPane.columnIndex="3"/>
+    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.columnSpan="5">
+
+      <GridPane GridPane.rowIndex="1" GridPane.columnIndex="1" vgap="5" hgap="5">
+        <Label text="Player 1 Name:" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <TextField GridPane.rowIndex="1" GridPane.columnIndex="2" text="Player 1"/>
+        <Button text="Set Player 1 Name" GridPane.rowIndex="1" GridPane.columnIndex="3" onAction="#createPlayer1"/>
       </GridPane>
 
-      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4" visible="false" GridPane.columnSpan="4" fx:id="Player_4_N_GP">
-        <Label text="Player 4 Name:" GridPane.rowIndex="4" GridPane.columnIndex="1" />
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2" vgap="5" hgap="5">
+        <Label text="Player 2 Name:" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <TextField GridPane.rowIndex="1" GridPane.columnIndex="2" text="Player 2"/>
+        <Button text="Set Player 2 Name" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
+      </GridPane>
+
+      <GridPane visible="false" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="3" fx:id="Player_3_N_GP" hgap="5" vgap="5">
+        <Label text="Player 3 Name:" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+        <TextField GridPane.rowIndex="1" GridPane.columnIndex="2"/>
+        <Button text="Set Player 3 Name" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
+      </GridPane>
+
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4" visible="false" GridPane.columnSpan="4" fx:id="Player_4_N_GP" hgap="5" vgap="5">
+        <Label text="Player 4 Name:" GridPane.rowIndex="1" GridPane.columnIndex="1" />
         <TextField GridPane.rowIndex="1" GridPane.columnIndex="2" />
         <Button text="Set Player 4 Name" GridPane.rowIndex="1" GridPane.columnIndex="3" />
       </GridPane>
+
     </GridPane>
+
   </GridPane>
   <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
     <Label fx:id="Player" />
+
     <GridPane GridPane.rowIndex="2" GridPane.columnIndex="1" vgap="-290"> <!-- fxml.Deck display GridPane -->
+
       <ImageView GridPane.columnIndex="1" GridPane.rowIndex="1" rotate="-5">
         <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
       </ImageView>
+
       <ImageView GridPane.columnIndex="1" GridPane.rowIndex="2" rotate="3">
         <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
       </ImageView>
+
       <ImageView GridPane.columnIndex="1" GridPane.rowIndex="3" >
         <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
       </ImageView>
+
     </GridPane>
+
     <GridPane GridPane.rowIndex="3" GridPane.columnIndex="1">
       <ListView fx:id="PlayerHandListView" GridPane.columnIndex="1" GridPane.columnSpan="6" GridPane.rowIndex="1"/>
+
       <Button text="Play Card" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="1"/>
+
       <Button text="Draw Card" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2"/>
+
       <Button text="Call Yuno" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.columnIndex="4"/>
+
     </GridPane>
   </GridPane>
 
