--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 
@@ -90,7 +89,7 @@
 
     <ListView fx:id="PlayerHandListView" GridPane.columnIndex="1" GridPane.rowIndex="3" maxWidth="Infinity" maxHeight="Infinity" orientation="HORIZONTAL" onMouseClicked="#ActivatePlayCard"/>
 
-    <GridPane GridPane.rowIndex="4" GridPane.columnIndex="1" GridPane.columnSpan="4">
+    <GridPane GridPane.rowIndex="4" GridPane.columnIndex="1" hgap="10" vgap="10" alignment="CENTER">
       <Button text="Play Card" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="Play_Card_Button" onAction="#PlayCard"/>
       <Button text="Draw Card" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
       <Button text="Call Yuno" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
