--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -91,7 +91,7 @@
 
     <GridPane GridPane.rowIndex="4" GridPane.columnIndex="1" hgap="10" vgap="10" alignment="CENTER">
       <Button text="Play Card" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="Play_Card_Button" onAction="#PlayCard"/>
-      <Button text="Draw Card" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+      <Button text="Draw Card" GridPane.columnIndex="2" GridPane.rowIndex="1" onAction="#DrawCard"/>
       <Button text="Call Yuno" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
 
     </GridPane>
