--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -91,9 +91,11 @@
 
     <GridPane GridPane.rowIndex="4" GridPane.columnIndex="1" hgap="10" vgap="10" alignment="CENTER">
       <Button text="Play Card" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="Play_Card_Button" onAction="#PlayCard"/>
-      <Button text="Draw Card" GridPane.columnIndex="2" GridPane.rowIndex="1" onAction="#DrawCard"/>
-      <Button text="Call Yuno" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
+      <Button text="Draw Card" GridPane.columnIndex="2" GridPane.rowIndex="1" onAction="#DrawCard" fx:id="Draw_Card_Button" />
+      <Button text="Next Player" GridPane.rowIndex="1" GridPane.columnIndex="3" onAction="#NextPlayer" disable="true" fx:id="Next_Player"/>
 
+      <Button text="Call Yuno" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+      <Button text="Call Yuno on Previous" GridPane.rowIndex="2" GridPane.columnIndex="2" GridPane.columnSpan="2"/>
     </GridPane>
   </GridPane>
 
